Correções e Adição de um ReadME Bonitinho

--- a/Learning_Programming/B7Web - Projetinhos/exercitando/projeto_awax/recursos/css/style.css
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/projeto_awax/recursos/css/style.css
@@ -877,7 +877,7 @@ input:focus {
 .sec-mapa {
     padding-top: 30px;
     padding-bottom: 30px;
-    background-image: url('/recursos/imagens/mapa.png');
+    background-image: url('./recursos/imagens/mapa.png');
     background-size: cover;
     background-position: center;
 }
