--- a/Learning_Programming/B7Web-Projetinhos/javascript/projetos/aulaJS_SimpleTaskList/style.css
+++ b/Learning_Programming/B7Web-Projetinhos/javascript/projetos/aulaJS_SimpleTaskList/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 * {
     margin: 0;
@@ -22,36 +23,23 @@ body {
 h1 {
     font-size: 48px;
     font-weight: 300;
+    color: #fdfdfd;
 }
 
 h1 span {
     font-weight: 600;
+    color: #fdfdfd;
 }
 
 p {
     font-weight: 400;
+    color: #fdfdfd;
     text-align: center;
-}
-
-#content-area,
-#text-area {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 12px;
-}
-.containerDom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
 }
 
 input {
     padding: 8px;
-    border: 1px solid #050505;
+    border: 1px solid #fdfdfd;
     border-radius: 8px;
     outline: none;
 }
@@ -65,5 +53,25 @@ button {
     transition: .5s;
 }
 button:hover {
-    background: #c4c4c4;
+    background: #151515;
+}
+
+#tasks-area {
+    padding: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    gap: 12px;
+    background: #050505;
+    border-radius: 12px;
+}
+
+ul {
+    padding-left: 1.5vw;
+    color: #c4c4c4;
+    list-style: url(http://www.w3.org/2000/svg);
+}
+ul  li {
+    color: #fdfdfd;
 }
